--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -26,6 +26,9 @@
     <!-- Don't enforce phpdoc type hint because it (might) only duplicate a PHP type hint -->
     <exclude name="Drupal.Commenting.FunctionComment.ParamMissingDefinition"/>
 
+    <!-- Don't enforce short single line comment -->
+    <exclude name="Drupal.Commenting.DocComment.ShortSingleLine"/>
+
     <!-- False positive with license header -->
     <exclude name="Drupal.Commenting.FileComment.NamespaceNoFileDoc"/>
 
