fixup! Add note about dynamic dropbutton to admin label

--- a/config/optional/views.view.civiremote_funding_application_list.yml
+++ b/config/optional/views.view.civiremote_funding_application_list.yml
@@ -624,7 +624,7 @@ display:
           field: dropbutton
           relationship: none
           group_type: group
-          admin_label: ''
+          admin_label: 'Actions dropbutton (Addtional actions might be appended dynamically)'
           plugin_id: dropbutton
           label: Actions
           exclude: false
