--- a/config/optional/views.view.civiremote_funding_combined_application_process_list.yml
+++ b/config/optional/views.view.civiremote_funding_combined_application_process_list.yml
@@ -509,7 +509,7 @@ display:
           field: dropbutton
           relationship: none
           group_type: group
-          admin_label: ''
+          admin_label: 'Actions dropbutton (Addtional actions might be appended dynamically)'
           plugin_id: dropbutton
           label: Actions
           exclude: false
